# typesec

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASES.md  TEXTPACK.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml
book/: README_book.md  build.sh  typesec.md
crates/typesec/: Cargo.toml
crates/typesec-agent/: Cargo.toml
crates/typesec-agent/src/: agent.rs  executor.rs  lib.rs  tool.rs
crates/typesec-agent/src/agent/: tests.rs
crates/typesec-agent/src/tool/: tests.rs
crates/typesec-agent/tests/: combinators.rs  integration.rs  odrl_constraints.rs  rbac_lattice.rs  typestate_audit.rs
crates/typesec-agent/tests/common/: mod.rs
crates/typesec-cli/: Cargo.toml
crates/typesec-cli/src/: main.rs
crates/typesec-cli/src/commands/: check.rs  engine.rs  generate.rs  mod.rs  run.rs  validate.rs
crates/typesec-cli/src/commands/engine/: tests.rs
crates/typesec-core/: Cargo.toml
crates/typesec-core/benches/: policy_check.rs
crates/typesec-core/src/: capability.rs  combinator.rs  glob.rs  lattice.rs  lib.rs  permissions.rs  policy.rs  resource.rs  role.rs  secure_value.rs  string_id.rs  typestate.rs
crates/typesec-core/src/capability/: revocation.rs  tests.rs
crates/typesec-core/src/combinator/: tests.rs
crates/typesec-core/src/glob/: tests.rs
crates/typesec-core/src/lattice/: tests.rs
crates/typesec-core/src/permissions/: tests.rs
crates/typesec-core/src/policy/: audit.rs  error.rs  fallback.rs  mint.rs  result.rs  subject.rs  tests.rs
crates/typesec-core/src/secure_value/: error.rs  label.rs  tests.rs
crates/typesec-core/src/typestate/: tests.rs
crates/typesec-core/tests/: compile_fail.rs
crates/typesec-core/tests/ui/: cannot_construct_capability.rs  cannot_construct_capability.stderr  cannot_create_new_agentstate.rs  cannot_create_new_agentstate.stderr  cannot_impl_permission.rs  cannot_impl_permission.stderr  coerce_requires_implies.rs  coerce_requires_implies.stderr
crates/typesec-integrations/: Cargo.toml
crates/typesec-integrations/src/: arcade.rs  did.rs  http.rs  jwt.rs  lib.rs  provider.rs  pydantic_ai.rs  workos.rs
crates/typesec-integrations/src/arcade/: tests.rs
crates/typesec-integrations/src/did/: crypto.rs  document.rs  envelope.rs  error.rs  gateway.rs  identifier.rs  keystore.rs  keystore_demo.rs  ollama.rs  tests.rs  typedid.rs
crates/typesec-integrations/src/did/tests/: common.rs  demo.rs  ed25519.rs  mod.rs  ollama.rs  typedid.rs
crates/typesec-integrations/src/jwt/: authenticator.rs  claims.rs  config.rs  engine.rs  tests.rs
crates/typesec-integrations/src/pydantic_ai/: tests.rs
crates/typesec-integrations/src/workos/: tests.rs
crates/typesec-integrations/tests/: provider_composition.rs
crates/typesec-macro/: Cargo.toml
crates/typesec-macro/src/: lib.rs  policy_dsl.rs  role_derive.rs  shared.rs  tests.rs
crates/typesec-macro/tests/: policy_inheritance.rs  role_derive.rs
crates/typesec-odrl/: Cargo.toml
crates/typesec-odrl/benches/: odrl_check.rs
crates/typesec-odrl/src/: audit.rs  constraint.rs  engine.rs  lib.rs  model.rs
crates/typesec-odrl/src/constraint/: tests.rs
crates/typesec-odrl/src/engine/: index.rs  tests.rs
crates/typesec-python/: Cargo.toml  pyproject.toml
crates/typesec-python/src/: decision.rs  engine.rs  format.rs  lib.rs
crates/typesec-rbac/: Cargo.toml
crates/typesec-rbac/benches/: rbac_check.rs
crates/typesec-rbac/src/: codegen.rs  engine.rs  graph_policy.rs  lib.rs  model.rs
crates/typesec-rbac/src/codegen/: tests.rs
crates/typesec-rbac/src/engine/: flatten.rs  pattern.rs  tests.rs
crates/typesec-rbac/src/graph_policy/: authored.rs  engine.rs  eval.rs  rule.rs  schema.rs  tests.rs  typed_graph.rs
crates/typesec-rbac/src/model/: tests.rs
crates/typesec/src/: lib.rs
docs/: architecture.md  company-graph-grust-sail.md  david-andrzejewski-scale-by-the-bay-2018-transcript.md  did-messaging.md  improvements.md  oauth-provider-integrations.md  typedid-agent-communications.md  typedid-ecosystem.md  typesec-and-auth-frameworks.md  typesec-claude1.md
docs/blog/: announcing-typesec.md
docs/blog/announcing-typesec/: post.md
docs/blog/announcing-typesec/diagrams/: capability-flow.mmd
docs/book/: PUBLISH.md  README_book.md  build.sh  check_epub_metadata.sh  cover.md  cover_notes.md  epub.css  fix_epub_layout.sh  mermaid.lua  metadata.yaml  metadata_notes.md  typesec.md
docs/book/diagrams/: agent-typestate.mmd  did-sequence.mmd  engine-contract.mmd  layering.mmd
docs/completed/: cover_notes.md  fable-review-2.md  improvements.md
examples/: README_examples.md  company_graph_grust_sail.rs  core_capability.rs  did_messaging.rs  langchain_company_graph.py  odrl_agent.rs  provider_integrations.rs  pydantic_ai_capabilities.py  rbac_agent.rs  typedid_agent_communications.rs  typedid_framework_adapters.py
examples/company_graph/: company_graph_core.py  company_graph_grust_sail.rs  graph_policy_schema.rs  langchain_company_graph.py  pydantic_company_graph.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: odrl_yaml.rs  rbac_yaml.rs
policies/: graph-corporate-example.yaml  odrl-example.yaml  rbac-example.yaml
scripts/: extract_tests.py
tests/python/: test_cli_policy.py  test_pydantic_ai_capabilities.py  test_typedid_framework_adapters.py
