[workspace]
resolver = "2"
members = [
    "crates/typesec",
    "crates/typesec-core",
    "crates/typesec-rbac",
    "crates/typesec-odrl",
    "crates/typesec-agent",
    "crates/typesec-integrations",
    "crates/typesec-macro",
    "crates/typesec-cli",
    "crates/typesec-python",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.10.0"
edition = "2024"
authors = ["typesec contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/querygraph/typesec"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
# serde_yaml 0.9 is archived/unmaintained; serde_norway is the maintained,
# API-compatible fork. The package rename keeps `serde_yaml::` paths working.
serde_yaml = { package = "serde_norway", version = "0.9" }
serde_json = "1"
garde = { version = "0.23.0", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
pyo3 = "0.25"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Proc-macro utilities
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Glob matching for resource patterns
glob = "0.3"

# Real DID envelope cryptography
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
getrandom = "0.2"
criterion = "0.5"
proptest = "1"
grust-graph = { version = "0.11.0", path = "../grust/crates/grust", features = ["typed-zod-rs"] }
grust-cypher = { version = "0.11.0", path = "../grust/crates/grust-cypher" }
grust-sail = { version = "0.11.0", path = "../grust/crates/grust-sail" }

[profile.release]
lto = true
codegen-units = 1
