[package]
name = "typesec-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent executor with typestate and capability-based access control"

[dependencies]
typesec-core = { version = "0.5.0", path = "../typesec-core" }
typesec-rbac = { version = "0.5.0", path = "../typesec-rbac" }
typesec-odrl = { version = "0.5.0", path = "../typesec-odrl" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
