[package]
name = "typesec-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core trait library for type-level security enforcement"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
trybuild = "1"
