[package]
name = "typesec-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core trait library for type-level security enforcement"

[dependencies]
chrono = { workspace = true }
glob = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }
proptest = { workspace = true }
trybuild = "1"

[[bench]]
name = "policy_check"
harness = false
