[package]
name = "typesec-integrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OAuth, OIDC, WorkOS, and Arcade integrations for typesec"

[dependencies]
typesec-core = { version = "0.4.0", path = "../typesec-core" }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
