[package]
name = "typesec-integrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OAuth, OIDC, WorkOS, Arcade, Pydantic AI, and DID integrations for typesec"

[features]
default = []
# Enables the deterministic, NON-cryptographic DemoDidKeyStore for local
# examples. Never enable this in production builds.
demo-crypto = []

[dependencies]
typesec-core = { version = "0.11.0", path = "../typesec-core" }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
x25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
