[package]
name = "typesec-macro"
version.workspace = true
edition.workspace = true
description = "Procedural macros for typesec — derive(TypesecRole) and policy! macro"

[lib]
proc-macro = true

[dependencies]
typesec-core = { path = "../typesec-core" }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
