[package]
name = "typesec-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for typesec — derive(TypesecRole) and policy! macro"

[lib]
proc-macro = true

[dependencies]
typesec-core = { version = "0.6.0", path = "../typesec-core" }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
