[package]
name = "typesec-odrl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ODRL policy engine for typesec — W3C digital rights language subset"

[dependencies]
typesec-core = { version = "0.6.0", path = "../typesec-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
