[package]
name = "typesec-rbac"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RBAC policy engine for typesec — YAML → typed enforcement"

[dependencies]
typesec-core = { version = "0.7.0", path = "../typesec-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
garde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
grust-graph = { workspace = true }
grust-cypher = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "rbac_check"
harness = false
